Обновил Dockerfile